--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -1,9 +1,27 @@
 {
 	"_version": "1.61.0",
 	"sap.app": {
-		"id": "sap.ui.demo.todo",
-		"type": "application"
+		"id": "sample-app",
+		"type": "application",
+		"i18n": "i18n/i18n.properties",
+		"title": "{{appTitle}}",
+		"description": "{{appDescription}}",
+		"applicationVersion": {
+	  	"version": "1.0.0"
+	}
 	},
+	"sap.ui": {
+	"_version": "1.1.0",
+	"technology": "UI5",
+	"deviceTypes": {
+	  "desktop": true,
+	  "tablet": true,
+	  "phone": true
+	},
+	"supportedThemes": [
+	  "sap_bluecrystal"
+	]
+  },
 	"sap.ui5": {
 		"dependencies": {
 			"minUI5Version": "1.121.0",
@@ -14,21 +32,21 @@
 			}
 		},
 		"rootView": {
-			"viewName": "sap.ui.demo.todo.view.App",
+			"viewName": "sample-app.view.App",
 			"type": "XML",
 			"id": "app"
 		},
+
+ 
+
+		
 		"models": {
 			"i18n": {
 				"type": "sap.ui.model.resource.ResourceModel",
 				"settings": {
-					"bundleName": "sap.ui.demo.todo.i18n.i18n",
+					"bundleName": "sample-app.i18n.i18n",
 					"async": true
 				}
-			},
-			"": {
-				"type": "sap.ui.model.json.JSONModel",
-				"uri": "model/todoitems.json"
 			}
 		},
 		"resources": {
