--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -47,6 +47,10 @@
 					"bundleName": "sample-app.i18n.i18n",
 					"async": true
 				}
+			},
+			"invoice" : {
+				"type": "sap.ui.model.json.JSONModel",
+				"uri":"Invoices.json"
 			}
 		},
 		"resources": {
