--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -8,7 +8,16 @@
 		"description": "{{appDescription}}",
 		"applicationVersion": {
 	  	"version": "1.0.0"
-	}
+	},
+		"dataSources": {
+			"invoiceRemote": {
+				"uri": "/destinations/northwind/V2/Northwind/Northwind.svc/Invoices",
+				"type": "OData",
+				"settings": {
+					"odataVersion": "2.0"
+				}
+			}
+		}
 	},
 	"sap.ui": {
 	"_version": "1.1.0",
@@ -49,8 +58,7 @@
 				}
 			},
 			"invoice" : {
-				"type": "sap.ui.model.json.JSONModel",
-				"uri":"Invoices.json"
+				"dataSource": "invoiceRemote"
 			}
 		},
 		"resources": {
