Integration testleri yapıldı

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -11,10 +11,11 @@
 	},
 		"dataSources": {
 			"invoiceRemote": {
-				"uri": "/destinations/northwind/V2/Northwind/Northwind.svc/Invoices",
+				"uri": "/destinations/northwind/V2/Northwind/Northwind.svc/",
 				"type": "OData",
 				"settings": {
-					"odataVersion": "2.0"
+					"odataVersion": "2.0",
+					"localUri": "localService/metadata.xml"
 				}
 			}
 		}
