--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.34.0",
+		"@sap/eslint-plugin-ui5-jsdocs": "^2.0.8",
+		"@sapui5/ts-types": "^1.139.0",
 		"@ui5/cli": "^4.0.23",
 		"@ui5/linter": "^1.18.1",
 		"@ui5/middleware-code-coverage": "^2.0.1",
