--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -68,6 +68,35 @@
 					"uri": "css/styles.css"
 				}
 			]
-		}
+		},
+		"routing": {
+			"config":{
+				"routerClass": "sap.m.Routing.Router",
+				"viewType": "XML",
+				"viewPath": "sample-app.view",
+				"controlId": "app",
+				"controlAggregation": "pages"
+			}
+		},
+		"routes": [
+			{
+				"pattern":"",
+				"name": "overview",
+				"target": "overview"
+			},
+			{
+				"pattern": "detail",
+				"name": "detail",
+				"target": "detail"
+			}
+		],
+		"targets": [{
+			"overview": {
+				"viewName": "overview"
+			},
+			"detail":{
+				"viewName": "Detail"
+			}
+		}]
 	}
 }
