--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -46,9 +46,6 @@
 			"type": "XML",
 			"id": "app"
 		},
-
- 
-
 		
 		"models": {
 			"i18n": {
@@ -68,35 +65,35 @@
 					"uri": "css/styles.css"
 				}
 			]
+		}, 
+	"routing": {
+	  "config": {
+		"routerClass": "sap.m.routing.Router",
+		"viewType": "XML",
+		"viewPath": "sample-app.view",
+		"controlId": "app",
+		"controlAggregation": "pages"
+	  },
+	  "routes": [
+		{
+		  "pattern": "",
+		  "name": "overview",
+		  "target": "overview"
 		},
-		"routing": {
-			"config":{
-				"routerClass": "sap.m.Routing.Router",
-				"viewType": "XML",
-				"viewPath": "sample-app.view",
-				"controlId": "app",
-				"controlAggregation": "pages"
-			}
+		{
+		  "pattern": "detail/{invoicePath}",
+		  "name": "detail",
+		  "target": "detail"
+		}
+	  ],
+	  "targets": {
+		"overview": {
+		  "viewName": "Overview"
 		},
-		"routes": [
-			{
-				"pattern":"",
-				"name": "overview",
-				"target": "overview"
-			},
-			{
-				"pattern": "detail",
-				"name": "detail",
-				"target": "detail"
-			}
-		],
-		"targets": [{
-			"overview": {
-				"viewName": "overview"
-			},
-			"detail":{
-				"viewName": "Detail"
-			}
-		}]
+		"detail": {
+		  "viewName": "Detail"
+		}
+	  }
+	}
 	}
 }
