Product.json eklendi

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -39,6 +39,11 @@
 					],
 					"fallbackLocale": ""
 				}
+			},
+
+			"products" : {
+				"type": "sap.ui.model.json.JSONModel",
+				"uri": "./model/Products.json"
 			}
 		},
 		"rootView": {
